[package]
name    = "yarsi"
version = "0.1.0"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz>", "ashokcpg < hey@ashokcpg.com >" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nixinfo = "0.3.2"
columns = { git = "https://github.com/S0raWasTaken/Columns", branch = "master" }
whoami  = "1.3.0"
